# arranged-analys

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml  update-data.yml
data/processed/: benchmarks.json  predictions.json  summary.json
data/raw/: p3_history.csv  p5_history.csv
docs/: index.html
docs/assets/: app.js  styles.css
docs/data/: benchmarks.json  p3-history.json  p5-history.json  predictions.json  summary.json
scripts/: build_site.py  run_baseline.py
src/arranged_analys/: __init__.py  config.py
src/arranged_analys/data/: jslottery.py  loader.py  sporttery.py
src/arranged_analys/features/: engineering.py  predictive.py
src/arranged_analys/models/: baseline.py  benchmark.py  frequency_prediction.py  hybrid_prediction.py
tests/: test_baseline.py  test_benchmark.py  test_frequency_prediction.py  test_jslottery.py  test_predictive_features.py  test_sporttery.py
